Make sure truncate is a direct child (#1483)
* Make sure truncate is a direct child

* Create clean-wolves-type.md

--- a/src/truncate/truncate.scss
+++ b/src/truncate/truncate.scss
@@ -35,7 +35,7 @@
   min-width: 0;
   max-width: 100%;
 
-  .Truncate-text {
+  > .Truncate-text {
     min-width: 1ch;
     max-width: fit-content;
     overflow: hidden;
